Fix subnav items alignment

--- a/wp-content/themes/custom/styles/components/_nav.scss
+++ b/wp-content/themes/custom/styles/components/_nav.scss
@@ -89,7 +89,8 @@
 }
 
 .Nav-sublistToggleLabel {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   box-sizing: border-box;
   width: 100%;
   border: 1px solid var(--teal);
@@ -105,6 +106,8 @@
 
 .Nav-sublistToggleLabelIcon {
   display: inline-block;
+  width: 1.5rem;
+  margin-right: 0.5rem;
   transform: translateY(0.125rem);
 }
 
@@ -123,6 +126,10 @@
   content: "€";
 }
 
+.Nav-sublistToggleLabelText {
+  display: inline-block;
+}
+
 .Nav-sublist {
   display: none;
   margin: 0;
@@ -131,7 +138,7 @@
 }
 
 .Nav-sublist .Nav-link {
-  padding-left: 4rem;
+  padding-left: 3rem;
   background-color: var(--light-teal);
   font-weight: 500;
 }
